@@ -17,12 +17,15 @@
 
 package org.apache.eventmesh.spi;
 
+import org.apache.eventmesh.common.config.ConfigService;
 import org.apache.eventmesh.spi.loader.ExtensionClassLoader;
 import org.apache.eventmesh.spi.loader.JarExtensionClassLoader;
 import org.apache.eventmesh.spi.loader.MetaInfExtensionClassLoader;
 
 import org.apache.commons.lang3.StringUtils;
 
+import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -84,11 +87,17 @@ public class EventMeshExtensionFactory {
                 if (extensionInstanceClass == null) {
                     return null;
                 }
-                T extensionInstance = extensionInstanceClass.newInstance();
+                T extensionInstance = extensionInstanceClass.getDeclaredConstructor().newInstance();
+                ConfigService.getInstance().populateConfigForObject(extensionInstance);
+
                 logger.info("initialize extension instance success, extensionType: {}, extensionInstanceName: {}",
-                    extensionType, extensionInstanceName);
+                        extensionType, extensionInstanceName);
                 return extensionInstance;
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (NoSuchMethodException | InstantiationException | IllegalAccessException | InvocationTargetException e) {
+                throw new ExtensionException("Extension initialize error", e);
+            } catch (NoSuchFieldException | IOException e) {
+                logger.error("initialize extension instance config failed, extensionType: {}, extensionInstanceName: {}",
+                        extensionType, extensionInstanceName, e);
                 throw new ExtensionException("Extension initialize error", e);
             }
         });
@@ -100,11 +109,17 @@ public class EventMeshExtensionFactory {
             if (extensionInstanceClass == null) {
                 return null;
             }
-            T extensionInstance = extensionInstanceClass.newInstance();
+            T extensionInstance = extensionInstanceClass.getDeclaredConstructor().newInstance();
+            ConfigService.getInstance().populateConfigForObject(extensionInstance);
+
             logger.info("initialize extension instance success, extensionType: {}, extensionName: {}",
-                extensionType, extensionInstanceName);
+                    extensionType, extensionInstanceName);
             return extensionInstance;
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (NoSuchMethodException | InstantiationException | IllegalAccessException | InvocationTargetException e) {
+            throw new ExtensionException("Extension initialize error", e);
+        } catch (NoSuchFieldException | IOException e) {
+            logger.error("initialize extension instance config failed, extensionType: {}, extensionInstanceName: {}",
+                    extensionType, extensionInstanceName, e);
             throw new ExtensionException("Extension initialize error", e);
         }
     }
@@ -120,5 +135,4 @@ public class EventMeshExtensionFactory {
         }
         return null;
     }
-
 }
